--- a/index.html
+++ b/index.html
@@ -4,38 +4,37 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, user-scalable=yes" />
   <title>4th Anniversary💙</title>
-
-  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Nanum+Myeongjo&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <!-- 배경 -->
-  <div class="background">
-    <div class="left"></div>
-    <div class="right"></div>
-  </div>
+  <!-- 전체 고정 캔버스 -->
+  <div class="canvas">
+    <!-- 배경 좌우 -->
+    <div class="background">
+      <div class="left"></div>
+      <div class="right"></div>
+    </div>
 
-  <!-- 헤더 -->
-  <div class="header">
-    4th Anniversary💙
-    <div class="subtext">2021.05.14 ~ 999.12.21</div>
-  </div>
+    <!-- 헤더 -->
+    <div class="header">
+      4th Anniversary💙
+      <div class="subtext">2021.05.14 ~ 999.12.21</div>
+    </div>
 
-  <!-- 전체 폴라로이드 영역 (배경처럼 고정 위치) -->
-  <div class="fixed-polaroid-container">
-    <div class="polaroid" style="top: 30%; left: 10%;">
+    <!-- 폴라로이드 (고정 위치) -->
+    <div class="polaroid" style="top: 32%; left: 10%;">
       <img src="images/default/photo1-1.jpg" alt="1">
       <div class="message">햇살도 우리처럼 따뜻했던 날 ☀️</div>
     </div>
 
     <div class="polaroid" style="top: 20%; left: 40%;">
       <img src="images/default/photo2-1.jpg" alt="2">
-      <div class="message">우리의 네 번째 기념일💙<br>고마워</div>
+      <div class="message">우리의 네 번째 기념일fkeaskf;sldkfsd;kf;sdakfl;asksd;fdlsa'kf💙<br>고마워</div>
     </div>
 
-    <div class="polaroid" style="top: 45%; left: 70%;">
+    <div class="polaroid" style="top: 50%; left: 68%;">
       <img src="images/default/photo3-1.jpg" alt="3">
       <div class="message">함께한 매 순간이<br>소중해 😊</div>
     </div>
