--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 </head>
 <body>
 
-  <!-- 전체 고정 캔버스 -->
   <div class="canvas">
-    <!-- 배경 좌우 -->
+    <!-- 배경 -->
     <div class="background">
       <div class="left"></div>
       <div class="right"></div>
@@ -23,18 +22,18 @@
       <div class="subtext">2021.05.14 ~ 999.12.21</div>
     </div>
 
-    <!-- 폴라로이드 (고정 위치) -->
-    <div class="polaroid" style="top: 32%; left: 10%;">
+    <!-- 폴라로이드들 -->
+    <div class="polaroid" style="top: 32%; left: 12%;">
       <img src="images/default/photo1-1.jpg" alt="1">
       <div class="message">햇살도 우리처럼 따뜻했던 날 ☀️</div>
     </div>
 
-    <div class="polaroid" style="top: 20%; left: 40%;">
+    <div class="polaroid" style="top: 24%; left: 42%;">
       <img src="images/default/photo2-1.jpg" alt="2">
-      <div class="message">우리의 네 번째 기념일fkeaskf;sldkfsd;kf;sdakfl;asksd;fdlsa'kf💙<br>고마워</div>
+      <div class="message">우리의 네 번째 기념일💙<br>고마워</div>
     </div>
 
-    <div class="polaroid" style="top: 50%; left: 68%;">
+    <div class="polaroid" style="top: 52%; left: 68%;">
       <img src="images/default/photo3-1.jpg" alt="3">
       <div class="message">함께한 매 순간이<br>소중해 😊</div>
     </div>
